adding basic js algorithm exercises

--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -32,6 +32,7 @@
     <li>The first version of ECMAScript was released in 1997.</li>
     <li>Since 2015 (ES2015/ES6) - ECMA has released annual specifications.</li>
   </ul>
-  <script src="index.js"></script>
+  <!-- <script src="index.js"></script> -->
+  <script src="exercise.js"></script>
 </body>
 </html>
