--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -33,6 +33,11 @@
     <li>Since 2015 (ES2015/ES6) - ECMA has released annual specifications.</li>
   </ul>
   <!-- <script src="index.js"></script> -->
-  <script src="exercise.js"></script>
+  <!-- <script src="index2.js"></script> -->
+  <!-- <script src="index3.js"></script> -->
+  <!-- <script src="index4.js"></script> -->
+  
+  <!-- <script src="exercise.js"></script> -->
+  <script src="exercise2.js"></script>
 </body>
 </html>
