clean up notes / file names

--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -32,12 +32,15 @@
     <li>The first version of ECMAScript was released in 1997.</li>
     <li>Since 2015 (ES2015/ES6) - ECMA has released annual specifications.</li>
   </ul>
-  <!-- <script src="index.js"></script> -->
-  <!-- <script src="index2.js"></script> -->
-  <!-- <script src="index3.js"></script> -->
-  <!-- <script src="index4.js"></script> -->
-  
+  <!-- <script src="jsbasics.js"></script> -->
+  <!-- <script src="jsconditions.js"></script> -->
+  <!-- <script src="jsloops.js"></script> -->
+  <!-- <script src="jsobjects1.js"></script> -->
+  <!-- <script src="jsobjects2.js"></script> -->
+
   <!-- <script src="exercise.js"></script> -->
-  <script src="exercise2.js"></script>
+  <!-- <script src="exercise2.js"></script> -->
+
+  <script src="exercise3.js"></script>
 </body>
 </html>
