javascript array notes

--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -37,10 +37,10 @@
   <!-- <script src="jsloops.js"></script> -->
   <!-- <script src="jsobjects1.js"></script> -->
   <!-- <script src="jsobjects2.js"></script> -->
+  <script src="jsarrays.js"></script>
 
   <!-- <script src="exercise.js"></script> -->
   <!-- <script src="exercise2.js"></script> -->
-
-  <script src="exercise3.js"></script>
+  <!-- <script src="exercise3.js"></script> -->
 </body>
 </html>
