--- a/javascript-basics/index.html
+++ b/javascript-basics/index.html
@@ -38,11 +38,12 @@
   <!-- <script src="jsobjects1.js"></script> -->
   <!-- <script src="jsobjects2.js"></script> -->
   <!-- <script src="jsarrays.js"></script> -->
-  <script src="jsfunctions.js"></script>
+  <!-- <script src="jsfunctions.js"></script> -->
 
   <!-- <script src="exercise.js"></script> -->
   <!-- <script src="exercise2.js"></script> -->
   <!-- <script src="exercise3.js"></script> -->
   <!-- <script src="exercise4.js"></script> -->
+  <script src="exercise5.js"></script>
 </body>
 </html>
