add object abstraction notes and stopwatch exercise

--- a/javascript-oop/index.html
+++ b/javascript-oop/index.html
@@ -59,7 +59,7 @@
 
   <h3>Pro vs Cons of Procedural Progamming</h3>
   <ul>
-    <li><b>Pros:</b> Easy to understand basic concept of objects and meaning of methods calls.</li>
+    <li><b>Pros:</b> Easy to understand basic concept of objects and meaning wof methods calls.</li>
     <li><b>Cons:</b> Can be messy. Too many parameters. Spaghetti code. Potential side effects, bugs, etc</li>
   </ul>
   <pre>
@@ -86,26 +86,8 @@
     </code>
   </pre>
 
-  <h4>Object Oriented Programming</h4>
-  <ul>
-    <li><b>Pros:</b> OOP combines groups of related variables (<i>properties</i>) and functions (<i>methods</i>) into a single unit (<i>object</i>).</li>
-    <li></li>
-    <li></li>
-  </ul>
-  <pre>
-    <code lang="language-javascript">
-      let employeee = {
-        baseSalary: 30_000,
-        overtime: 10,
-        rate: 20,
-        getWage: function(){
-          return this.baseSalary + (this.overtime * this.rate);
-        }
-      }
-      employeee.getWage();
-    </code>
-  </pre>
   
-      
+  <!-- <script src="Objects/object.js"></script> -->
+  <script src="Objects/stopwatch.js"></script>
 </body>
 </html>
