prototypes/inheritance notes

--- a/javascript-oop/index.html
+++ b/javascript-oop/index.html
@@ -87,7 +87,9 @@
   </pre>
 
   
-  <!-- <script src="Objects/object.js"></script> -->
-  <script src="Objects/stopwatch.js"></script>
+<!-- <script src="Notes/object.js"></script> -->
+<!-- <script src="Notes/prototypes.js"></script> -->
+
+<script src="Exercises/stopwatch.js"></script>
 </body>
 </html>
