js dom traversal notes

--- a/javascript-dom/dom-traversal/index.html
+++ b/javascript-dom/dom-traversal/index.html
@@ -5,6 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM Traversal</title>
+
+    <style>
+      .body {
+        margin: 0;
+      }
+      div {
+        display: flex;
+        margin: 0.5rem;
+        padding: 1rem;
+        border: 3px solid black;
+        min-height: 1rem;
+        flex-grow: 1;
+      }
+      .grandparent {
+        background-color: hsl(0, 50%, 50%);
+        flex-direction: column;
+      }
+      .parent {
+        background-color: hsl(100, 50%, 50%);
+      }
+      .child {
+        background-color: hsl(200, 50%, 50%);
+      }
+    </style>
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="grandparent" id="grandparent-id">
+      <div class="parent">
+        <div class="child" id="child-one"></div>
+        <div class="child"></div>
+      </div>
+      <div class="parent">
+        <div class="child"></div>
+        <div class="child"></div>
+      </div>
+    </div>
+  </body>
 </html>
