--- a/javascript-dom/dom-traversal/index.html
+++ b/javascript-dom/dom-traversal/index.html
@@ -29,7 +29,7 @@
         background-color: hsl(200, 50%, 50%);
       }
     </style>
-    <script src="script.js" defer></script>
+    <script src="domtravs.js" defer></script>
   </head>
   <body>
     <div class="grandparent" id="grandparent-id">
