tutorial dom project

--- a/javascript-dom/dom-manipulation/index.html
+++ b/javascript-dom/dom-manipulation/index.html
@@ -33,12 +33,12 @@
     </div>
 
     <!-- List -->
-    <!-- <h4>appendChild()</h4>
+    <h4>appendChild()</h4>
     <ul id="myList">
       <li>Coffee</li>
       <li>Tea</li>
     </ul>
     <p>Click "Append" to append an item to the end of the list:</p>
-    <button onclick="myFunction()">Append</button> -->
+    <button onclick="myFunction()">Append</button>
   </body>
 </html>
